Agrego la excepcion para DNA inválido y ajusto un poco el método principal para validar dna.

--- a/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
+++ b/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\DnaInvalidException.cs" />
     <Compile Include="Interfaces\IMutantService.cs" />
     <Compile Include="Models\Human.cs" />
     <Compile Include="MutantService.cs" />
