Agrego controlle y servicio para estadísticas

--- a/SourceCode/ChallengeMeLiServices.Web/ChallengeMeLiServices.Web.csproj
+++ b/SourceCode/ChallengeMeLiServices.Web/ChallengeMeLiServices.Web.csproj
@@ -24,6 +24,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -121,6 +122,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="AutoMapper\AutoMapperWeb.cs" />
     <Compile Include="Controllers\MutantV1Controller.cs" />
+    <Compile Include="Controllers\StatsV1Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
