--- a/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
+++ b/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
@@ -43,9 +43,11 @@
   <ItemGroup>
     <Compile Include="Exceptions\DnaInvalidException.cs" />
     <Compile Include="Interfaces\IMutantService.cs" />
+    <Compile Include="Interfaces\IStatsService.cs" />
     <Compile Include="Models\Human.cs" />
     <Compile Include="MutantService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatsService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
