--- a/SourceCode/ChallengeMeLiServices.Services.Tests/packages.config
+++ b/SourceCode/ChallengeMeLiServices.Services.Tests/packages.config
@@ -1,5 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.11" targetFramework="net452" />
   <package id="MSTest.TestFramework" version="1.1.11" targetFramework="net452" />
+  <package id="Npgsql" version="4.1.1" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
+  <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
