Agregado Servicio de DNA y primeros guardados/lecturas contra la base de datos usando NHibernate y Fluent

--- a/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
+++ b/SourceCode/ChallengeMeLiServices.Services/ChallengeMeLiServices.Services.csproj
@@ -94,7 +94,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DnaService.cs" />
     <Compile Include="Exceptions\DnaInvalidException.cs" />
+    <Compile Include="Interfaces\IDnaService.cs" />
     <Compile Include="Interfaces\IMutantService.cs" />
     <Compile Include="Interfaces\IStatsService.cs" />
     <Compile Include="MutantService.cs" />
