--- a/SourceCode/ChallengeMeLiServices.DataAccess/ChallengeMeLiServices.DataAccess.csproj
+++ b/SourceCode/ChallengeMeLiServices.DataAccess/ChallengeMeLiServices.DataAccess.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Daos\Interfaces\IDnaDao.cs" />
     <Compile Include="Maps\DnaMap.cs" />
     <Compile Include="Models\Dna.cs" />
+    <Compile Include="Models\DnaStats.cs" />
     <Compile Include="Models\Human.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DnaRepository.cs" />
