--- a/SourceCode/ChallengeMeLiServices.Web/ChallengeMeLiServices.Web.csproj
+++ b/SourceCode/ChallengeMeLiServices.Web/ChallengeMeLiServices.Web.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\DnaStatsV1Dto.cs" />
     <Compile Include="Models\HumanV1Dto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Unity\UnityConfig.cs" />
