--- a/SourceCode/ChallengeMeLiServices.Services/packages.config
+++ b/SourceCode/ChallengeMeLiServices.Services/packages.config
@@ -3,12 +3,19 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Options" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net461" />
   <package id="NHibernate" version="5.2.6" targetFramework="net461" />
   <package id="NHibernate.Caches.SysCache" version="5.6.0" targetFramework="net461" />
   <package id="Npgsql" version="4.1.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.3" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
