--- a/SourceCode/ChallengeMeLiServices.Web.Tests/packages.config
+++ b/SourceCode/ChallengeMeLiServices.Web.Tests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
+  <package id="Castle.Core" version="4.4.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
+  <package id="Moq" version="4.13.1" targetFramework="net461" />
   <package id="Npgsql" version="4.1.1" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
