--- a/SourceCode/ChallengeMeLiServices.DataAccess.Tests/ChallengeMeLiServices.DataAccess.Tests.csproj
+++ b/SourceCode/ChallengeMeLiServices.DataAccess.Tests/ChallengeMeLiServices.DataAccess.Tests.csproj
@@ -62,7 +62,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Daos\DnaDaoTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\DnaRepositoryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
