--- a/SourceCode/ChallengeMeLiServices.Services.Tests/ChallengeMeLiServices.Services.Tests.csproj
+++ b/SourceCode/ChallengeMeLiServices.Services.Tests/ChallengeMeLiServices.Services.Tests.csproj
@@ -107,8 +107,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DnaServiceTests.cs" />
+    <Compile Include="MemoryCacheServiceTests.cs" />
+    <Compile Include="MutantServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceTests.cs" />
+    <Compile Include="StatsServiceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
