--- a/SourceCode/ChallengeMeLiServices.Web.Tests/ChallengeMeLiServices.Web.Tests.csproj
+++ b/SourceCode/ChallengeMeLiServices.Web.Tests/ChallengeMeLiServices.Web.Tests.csproj
@@ -100,7 +100,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\MutantV1ControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Controllers\StatsV1ControllerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ChallengeMeLiServices.Web\ChallengeMeLiServices.Web.csproj">
