--- a/SourceCode/ChallengeMeLiServices.DataAccess.Tests/packages.config
+++ b/SourceCode/ChallengeMeLiServices.DataAccess.Tests/packages.config
@@ -11,4 +11,5 @@
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
